package com.unlp.payments.persistence;

import org.springframework.data.jpa.repository.JpaRepository;

public interface PetriNetStateRepository extends JpaRepository<PetriNetStateEntity, String> {
}
